--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "axios": "^1.7.7",
+        "leaflet": "^1.9.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "axios": "^1.7.7"
+        "react-leaflet": "^4.2.1"
     },
     "devDependencies": {
+        "@types/leaflet": "^1.9.8",
+        "@types/node": "^25.2.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.3.1",
-        "typescript": "^5.5.3",
-        "vite": "^5.4.1"
+        "@vitejs/plugin-react": "^4.7.0",
+        "typescript": "^5.9.3",
+        "vite": "^7.3.1"
     }
 }
